[gd_scene load_steps=20 format=2]

[ext_resource path="res://actors/enemies/ShockwaveEnemy.gd" type="Script" id=1]
[ext_resource path="res://particles/impacts/rounded_8.png" type="Texture" id=2]
[ext_resource path="res://actors/components/attackring.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.4, 2, 1.4 )

[sub_resource type="QuadMesh" id=2]
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.509804, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.521569, 0.521569, 0.521569, 1 )

[sub_resource type="CylinderMesh" id=5]
material = SubResource( 4 )
top_radius = 0.25
bottom_radius = 2.0
height = 4.0
radial_segments = 4
rings = 1

[sub_resource type="CylinderShape" id=6]
radius = 13.5
height = 0.6

[sub_resource type="CylinderShape" id=7]
radius = 12.5
height = 1.0

[sub_resource type="Animation" id=8]
resource_name = "AttackShockwave"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Attack_Ring:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.03, 0.03, 0.03 ), Vector3( 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.9, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 1, Vector2( 1, 1 ), 1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
direction = Vector3( 0, 0, 1 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 32.0
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )

[sub_resource type="SpatialMaterial" id=14]
flags_transparent = true
flags_vertex_lighting = true
vertex_color_use_as_albedo = true
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=15]
material = SubResource( 14 )

[sub_resource type="SphereShape" id=16]
radius = 11.0

[node name="Shockwave" type="KinematicBody" groups=[
"Enemy",
]]
collision_layer = 8
collision_mask = 11
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Meshes" type="Spatial" parent="."]

[node name="Face" type="MeshInstance" parent="Meshes"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0.2, -0.8 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Mesh" type="MeshInstance" parent="Meshes"]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="Attack_Ring" type="Spatial" parent="."]
transform = Transform( 0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 0, 0, 0 )
script = ExtResource( 3 )

[node name="Attack_Active" type="Area" parent="Attack_Ring"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0 )
collision_layer = 0
collision_mask = 2147483650

[node name="CollisionShape" type="CollisionShape" parent="Attack_Ring/Attack_Active"]
shape = SubResource( 6 )

[node name="Attack_Safety" type="Area" parent="Attack_Ring"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0 )
collision_layer = 0
collision_mask = 2147483650

[node name="CollisionShape" type="CollisionShape" parent="Attack_Ring/Attack_Safety"]
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackShockwave = SubResource( 8 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 2

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -1.9, 0 )
amount = 1
lifetime = 1.5
one_shot = true
visibility_aabb = AABB( -4, -4, -3.2, 8, 8, 6.4 )
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 15 )

[node name="PresenceDetector" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="PresenceDetector"]
shape = SubResource( 16 )
[connection signal="body_entered" from="Attack_Ring/Attack_Active" to="Attack_Ring" method="_on_active_body_entered"]
[connection signal="body_exited" from="Attack_Ring/Attack_Active" to="Attack_Ring" method="_on_active_body_exited"]
[connection signal="body_entered" from="Attack_Ring/Attack_Safety" to="Attack_Ring" method="_on_safety_body_entered"]
[connection signal="body_exited" from="Attack_Ring/Attack_Safety" to="Attack_Ring" method="_on_safety_body_exited"]
